--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 PORT=5000
 DB_URL=mongodb+srv://shakhriyor:linara7401@cluster0.2xafcer.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_ACCESS_SECRET=jwt-secret-key
+JWT_REFRESH_SECRET=jwt-refresh-secret-key
