--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,9 @@ PORT=5000
 DB_URL=mongodb+srv://shakhriyor:linara7401@cluster0.2xafcer.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_ACCESS_SECRET=jwt-secret-key
 JWT_REFRESH_SECRET=jwt-refresh-secret-key
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=587
+SMTP_USER=shakhriyor1156@gmail.com
+SMTP_PASSWORD=22591245447401
+API_URL=http://localhost:5000
+CLIENT_URL=http://localhost:3000
