--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
+    "nodemailer": "^6.9.11",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
